--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: '猫大刚主页',
-      repo: '',
+      repo: 'https://gitee.com/mgang/my-project.git',
       coverpage: true,
       loadNavbar: true,
       loadSidebar: true,
@@ -22,7 +22,7 @@
       routerMode: 'history',
       subMaxLevel: 2,
       //basePath: 'http://mg.meiflower.top/',
-      sidebarDisplayLevel: 0, // set sidebar display level
+      sidebarDisplayLevel: 2, // set sidebar display level
       count:{
         countable:true,
         fontsize:'0.9em',
