猫大刚首页更新

--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -57,7 +57,7 @@
         'card-link': {
           template: `
             <a :href="href" target="_blank">
-              预览卡片({{title}})
+              {{title}}
             </a>
           `,
           props:["id","title"],
