--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -6,13 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="renderer" content="webkit">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <style>
     .markdown-section iframe {
       border: 1px solid #eee;
       min-width: 0 !important;
     }
+    :root {
+      --docsifytabs-border-color: #ededed;
+      --docsifytabs-tab-highlight-color: green;
+    }
   </style>
+  <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+  <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div id="app"></div>
@@ -150,6 +160,33 @@
             }
           }
         }
+      },
+      timeUpdater: {
+        text: "<div align='right' width='100%' style='color:gray;font-size:16px;margin-top:10px;'>最后更新时间: {docsify-updated}</div>",
+        formatUpdated: "{YYYY}-{MM}-{DD} {HH}:{mm}",
+      },
+      // note tip warning attention https://github.com/fzankl/docsify-plugin-flexible-alerts
+      'flexible-alerts': {
+        style: 'callout'
+      },
+      progress: {
+          position: "top",
+          color: "var(--theme-color,#42b983)",
+          height: "3px",
+      },
+      tabs: {
+        persist    : true,      // default
+        sync       : true,      // default
+        theme      : 'classic', // default
+        tabComments: true,      // default
+        tabHeadings: true       // default
+      },
+      docsifyBackTop: {
+        size: 32,           	// 数值，组件大小，默认值32。
+        bottom: 15,         	// 数值，组件底部偏移距离，默认值15。
+        right: 15,          	// 数值，组件右侧偏移距离，默认值15。
+        logo: '🔝',				// logo:字符串或svg矢量图代码，默认为svg代码图标。
+        bgColor: '\#2096ff'    	// 背景颜色，#fff、pink等，logo为svg图标时，不填。
       }
     }
   </script>
@@ -177,6 +214,16 @@
   <!-- 引入 layui.js -->
   <script src="//unpkg.com/layui@2.7.6/dist/layui.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/heyui"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>
+  <!-- Latest -->
+  <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-progress@latest/dist/progress.min.js"></script>
+  <link rel="stylesheet" href="//unpkg.com/docsify-accordion/src/style.css">
+  <script src="//unpkg.com/docsify-accordion/src/index.js"></script>
+  <!-- docsify-tabs (latest v1.x.x) -->
+  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Sumsung524/docsify-backTop/dist/docsify-backTop.min.js"></script>
+
   <script>
     var _hmt = _hmt || [];
     (function() {
