修复一些问题

--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -21,6 +21,10 @@
         background: rgba(0, 0, 0, 0.1);
         border-left: 3px solid #42b983 !important;
     }
+    .sidebar-toggle {
+      left: 15px !important;
+      bottom: 15px !important;
+    }
   </style>
   <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
   <!--[if lt IE 9]>
@@ -40,7 +44,7 @@
       autoHeader: true,
       onlyCover: false,
       routerMode: 'history',
-      subMaxLevel: 2,
+      subMaxLevel: 3,
       //basePath: 'http://mg.meiflower.top/',
       sidebarDisplayLevel: 2, // set sidebar display level
       count:{
