发布运维部署kafka和fastdfs

--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -81,7 +81,7 @@
           props:["id","title"],
           computed: {
             href(){
-              return "http://mg.meiflower.top/cardview/index.html?id="+this.id;
+              return "https://mg.meiflower.top/cardview/index.html?id="+this.id;
             }
           },
           data() {
@@ -102,7 +102,7 @@
               return "card_" + this.id;
             },
             href(){
-              return "http://mg.meiflower.top/cardview/index.html?id="+this.id;
+              return "https://mg.meiflower.top/cardview/index.html?id="+this.id;
             },
             cardHeight(){
               var result = "400px";
