D边沿触发器，T触发器，行波计数器 机组页面分片

--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -25,6 +25,10 @@
       left: 15px !important;
       bottom: 15px !important;
     }
+    .my-img{
+      text-align: left;
+      border: 1px solid #ddd;
+    }
   </style>
   <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
   <!--[if lt IE 9]>
