--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -40,7 +40,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '猫大刚主页',
+      name: '程序猫大刚',
       repo: 'https://gitee.com/mgang/my-project.git',
       coverpage: true,
       loadNavbar: true,
@@ -69,7 +69,7 @@
         successText: '复制成功'
       },
       footer: {
-        copy: '<span>mango mei &copy; 2022</span>',
+        copy: '<span>程序猫大刚 &copy; 2022</span>',
         auth: '粤ICP备17082965号',
         pre: '',
         style: 'text-align: center;',
