发布项目模块

--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -199,6 +199,9 @@
         right: 15,          	// 数值，组件右侧偏移距离，默认值15。
         logo: 'top',				// logo:字符串或svg矢量图代码，默认为svg代码图标。
         bgColor: '#42b983'    	// 背景颜色，#fff、pink等，logo为svg图标时，不填。
+      },
+      plantuml: {
+        skin: 'default'
       }
     }
   </script>
@@ -235,7 +238,7 @@
   <!-- docsify-tabs (latest v1.x.x) -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="https://cdn.jsdelivr.net/gh/Sumsung524/docsify-backTop/dist/docsify-backTop.min.js"></script>
-
+  <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
   <script>
     var _hmt = _hmt || [];
     (function() {
