--- a/home/src/index.html
+++ b/home/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mango mei</title>
+  <title>美丽的花</title>
   <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico" rel="external nofollow" />
   <meta content="梅刚的域名首页" name="description" />
   <meta content="后端，BS，Java后端个人简历，后端开发" name="keywords" />
