--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -70,7 +70,7 @@
       },
       footer: {
         copy: '<span>程序猫大刚 &copy; 2022</span>',
-        auth: '粤ICP备17082965号',
+        auth: '<a href="https://beian.miit.gov.cn/#/Integrated/index">粤ICP备17082965号</a>',
         pre: '',
         style: 'text-align: center;',
         class: 'className'
