完善三体相关

--- a/home-docsify/world/threebody/face-wall.html
+++ b/home-docsify/world/threebody/face-wall.html
@@ -14,7 +14,7 @@
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--theme:uncover;--style:{
     font-size: 30px;
 }
-;" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/02.png&quot;);filter:opacity(.6);"></figure><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/03.png&quot;);filter:opacity(.5);"></figure><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/043.png&quot;);filter:opacity(.5);"></figure><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/05.png&quot;);filter:opacity(.6);"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="1" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-theme="uncover" data-style="{
+;" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/02.png&quot;);filter:opacity(.6);"></figure><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/03.png&quot;);filter:opacity(.5);"></figure><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/043.png&quot;);filter:opacity(.5);"></figure><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/05.png&quot;);filter:opacity(.6);"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="1" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-theme="uncover" data-style="{
     font-size: 30px;
 }
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--theme:uncover;--style:{
@@ -37,7 +37,7 @@
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:black;--color:white;--theme:uncover;--style:{
     font-size: 30px;
 }
-;color:white;background-color:black;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="left"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/02.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720" x="50%"><section id="2" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="black" data-color="white" data-theme="uncover" data-style="{
+;color:white;background-color:black;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="left"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/02.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720" x="50%"><section id="2" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="black" data-color="white" data-theme="uncover" data-style="{
     font-size: 30px;
 }
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:black;--color:white;--theme:uncover;--style:{
@@ -63,7 +63,7 @@
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:white;--color:black;--theme:uncover;--style:{
     font-size: 30px;
 }
-;color:black;background-color:white;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/03.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="3" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="white" data-color="black" data-theme="uncover" data-style="{
+;color:black;background-color:white;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/03.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="3" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="white" data-color="black" data-theme="uncover" data-style="{
     font-size: 30px;
 }
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:white;--color:black;--theme:uncover;--style:{
@@ -89,7 +89,7 @@
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:black;--color:white;--theme:uncover;--style:{
     font-size: 30px;
 }
-;color:white;background-color:black;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="left"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/043.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720" x="50%"><section id="4" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="black" data-color="white" data-theme="uncover" data-style="{
+;color:white;background-color:black;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="left"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/043.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720" x="50%"><section id="4" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="black" data-color="white" data-theme="uncover" data-style="{
     font-size: 30px;
 }
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:black;--color:white;--theme:uncover;--style:{
@@ -115,7 +115,7 @@
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:white;--color:black;--theme:uncover;--style:{
     font-size: 30px;
 }
-;color:black;background-color:white;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;http://qn.meiflower.top/threebody/05.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="5" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="white" data-color="black" data-theme="uncover" data-style="{
+;color:black;background-color:white;background-image:none;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://mg.meiflower.top/oss/threebody/05.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="5" data-marpit-fragments="3" data-header="三体2黑暗森林" data-footer="面壁计划" data-class="gaia" data-background-color="white" data-color="black" data-theme="uncover" data-style="{
     font-size: 30px;
 }
 " class="gaia" style="--header:三体2黑暗森林;--footer:面壁计划;--class:gaia;--background-color:white;--color:black;--theme:uncover;--style:{
