--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -203,11 +203,14 @@
       plantuml: {
         skin: 'default'
       },
+      // docsify-plugin-toc
       toc: {
-        scope: '.markdown-section',
-        headings: 'h1, h2, h3, h4, h5, h6',
-        title: '目录',
+        tocMaxLevel: 5,
+        target: 'h1, h2, h3, h4, h5',
+        ignoreHeaders:  ['<!-- {docsify-ignore} -->', '<!-- {docsify-ignore-all} -->']
       },
+      // 百度统计ID
+      baiduTjId: "17b94311795f1539081c4a0a0f14d4fb",
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
@@ -244,25 +247,10 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="https://cdn.jsdelivr.net/gh/Sumsung524/docsify-backTop/dist/docsify-backTop.min.js"></script>
   <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
-  
-  <!-- toc 目录-->
-  <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css">
-  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
-
-  <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var host = window.location.host;
-      if(host.startsWith("localhost") || host.startsWith("127.0.0.1")){
-        return ;
-      }
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?17b94311795f1539081c4a0a0f14d4fb";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    
-    </script>
-    
+  <!-- docsify-plugin-toc -->
+  <link rel="stylesheet" href="https://unpkg.com/docsify-plugin-toc@1.3.1/dist/light.css">
+  <script src="https://unpkg.com/docsify-plugin-toc@1.3.1/dist/docsify-plugin-toc.min.js"></script>
+  <!-- 百度统计 -->
+  <script src="https://unpkg.com/docsify-baidu-tj@1.0.2/dist/docsify-baidu-tj.min.js"></script>    
 </body>
 </html>
