--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -29,6 +29,18 @@
       text-align: left;
       border: 1px solid #ddd;
     }
+    .markdown-section {
+      max-width: 90% !important;
+    }
+    aside.toc-nav {
+      margin-right: 10px !important; 
+      width: 200px !important;
+    }
+    @media only screen and (min-width: 1300px){
+      section.content {
+          padding-right: 200px !important;
+      }
+    }
   </style>
   <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
   <!--[if lt IE 9]>
