--- a/home-docsify/index.html
+++ b/home-docsify/index.html
@@ -223,6 +223,21 @@
       },
       // 百度统计ID
       baiduTjId: "17b94311795f1539081c4a0a0f14d4fb",
+      // giscus评论
+      giscus:{
+        repo: "mg0324/docsify-comments",
+        repoId: "R_kgDOI68LwA",
+        category: "Announcements",
+        categoryId: "DIC_kwDOI68LwM4CUDhM",
+        mapping: "url",
+        reactionsEnabled: "0",
+        strict: "1",
+        emitMetadata: "0",
+        inputPosition: "bottom",
+        theme: "light",
+        lang: "zh-CN",
+        loading: "lazy"
+      },
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
@@ -263,6 +278,9 @@
   <link rel="stylesheet" href="https://unpkg.com/docsify-plugin-toc@1.3.1/dist/light.css">
   <script src="https://unpkg.com/docsify-plugin-toc@1.3.1/dist/docsify-plugin-toc.min.js"></script>
   <!-- 百度统计 -->
-  <script src="https://unpkg.com/docsify-baidu-tj@1.0.2/dist/docsify-baidu-tj.min.js"></script>    
+  <script src="https://unpkg.com/docsify-baidu-tj@1.0.2/dist/docsify-baidu-tj.min.js"></script> 
+  <!-- giscus评论  -->
+  <link rel="stylesheet" href="https://unpkg.com/docsify-giscus@1.0.2/dist/giscus.css">
+  <script src="https://unpkg.com/docsify-giscus@1.0.2/dist/docsify-giscus.min.js"></script>   
 </body>
 </html>
